# arize-evals

./: .gitignore  MCP_SERVER_PLAN.md  README.md  REPLICATION_SPEC.md  styles.css
.github/workflows/: eval.yml
eval_framework/: README.md  pyproject.toml
eval_framework/src/company_eval_framework/: __init__.py  axial.py  cli.py  config.py  dataset.py  end_to_end_eval.py  evaluators.py  runner.py  utils.py
eval_framework/src/company_eval_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
eval_framework/src/company_eval_framework/dashboard/: __init__.py  database.py  schemas.py  server.py
eval_framework/src/company_eval_framework/dashboard/api/: __init__.py  runs.py
eval_framework/src/company_eval_framework/dashboard/frontend/: index.html  package-lock.json  package.json
eval_framework/src/company_eval_framework/dashboard/frontend/src/: App.tsx  index.css
eval_framework/src/company_eval_framework/dashboard/frontend/src/pages/: RunDetails.tsx  RunsList.tsx
eval_framework/src/company_eval_framework/mcp/: ARCHITECTURE.md  CHECKLIST.md  FILE_INDEX.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  __init__.py  example_chatbot.yaml  pyproject.toml  resources.py  server.py  test_mcp.py  tools.py  types.py
eval_framework/tests/: test_imports.py
example_team_project/: .env.example  .gitignore  __init__.py  agent_config.yaml  agent_workflow.py  config.yaml  config_loader.py  eval_config.yaml  eval_config_agent.yaml  eval_config_basic_chat.yaml  eval_config_basic_chat_fail.yaml  eval_config_basic_chat_pass.yaml  eval_config_custom.yaml  eval_config_multi_agent.yaml  eval_config_multi_agent_fail.yaml  eval_config_multi_agent_pass.yaml  eval_config_rag.yaml  eval_config_rag_fail.yaml  eval_config_rag_pass.yaml  eval_config_simple_llm.yaml  eval_config_tool_agent.yaml  eval_config_tool_agent_fail.yaml  eval_config_tool_agent_pass.yaml  eval_dataset.json  multi_agent_workflow.py  my_evaluators.py  pyproject.toml  rag_workflow.py  run_evaluation.py  test_all_agents.py
example_team_project/data/: eval_dataset.json  eval_dataset.jsonl  eval_dataset_rag_fail.jsonl  eval_dataset_rag_pass.jsonl
example_team_project/eval_results/: evaluation_results.json
example_team_project/example_team_project.egg-info/: PKG-INFO  SOURCES.txt
example_team_project/my_app/: __init__.py  agent_factory.py  app.py  eval_adapter.py
example_team_project/workflows/: __init__.py  agent_workflow.py  multi_agent_workflow.py  rag_workflow.py
landing_page/: index.html  main.js  styles.css
web/: Dockerfile  docker-compose.yml
web/backend/: .dockerignore  requirements.txt
web/backend/app/: __init__.py  database.py  main.py  schemas.py  seed.py
web/backend/app/api/: datasets.py  integrations.py  runs.py  traces.py
web/frontend/: Dockerfile  index.html  tailwind.config.js  vite.config.ts
web/frontend/src/: App.tsx  index.css
web/frontend/src/components/: DocsLayout.tsx  Header.tsx
web/frontend/src/pages/: Compare.tsx  Dashboard.tsx  DatasetsPage.tsx  Landing.tsx  RunDetails.tsx  TraceDetails.tsx  Traces.tsx
web/frontend/src/pages/docs/: Api.tsx  AppTypes.tsx  CICD.tsx  Config.tsx  CustomEvaluators.tsx  Dashboard.tsx  Datasets.tsx  EvalSuites.tsx  FailureAnalysis.tsx  HowItWorks.tsx  Installation.tsx  Integrations.tsx  Introduction.tsx  Metrics.tsx  Quickstart.tsx  SDK.tsx  Thresholds.tsx  Tracing.tsx
web/frontend/src/pages/docs/cli/: CiRun.tsx  DashboardCmd.tsx
web/frontend/src/pages/docs/use-cases/: Agents.tsx  Chat.tsx  RAG.tsx
